[gd_scene load_steps=3 format=2]

[ext_resource path="res://PauseMenu/PauseMenu.gd" type="Script" id=1]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[node name="PauseMenu" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
pause_mode = 2
visible = false
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
use_parent_material = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -500.0
margin_right = 150.0
custom_constants/separation = 50

[node name="Continue" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
use_parent_material = true
margin_right = 300.0
margin_bottom = 76.0
text = "Continue"

[node name="RestartWave" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
use_parent_material = true
margin_top = 126.0
margin_right = 300.0
margin_bottom = 202.0
text = "Restart Wave"

[node name="MainMenu" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
use_parent_material = true
margin_top = 252.0
margin_right = 300.0
margin_bottom = 328.0
text = "MainMenu"

[node name="Label" type="Label" parent="CanvasLayer/Control"]
use_parent_material = true
anchor_right = 1.0
margin_bottom = 200.0
text = "Pause"
align = 1
valign = 1

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/RestartWave" to="." method="_on_RestartWave_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
